# meadow-movie-inngest

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: inngest_client.py  main.py
src/functions/: movie_watched.py  schemas.py
tests/: test_movie_watched.py
