[project]
name = "meadow-movie-inngest"
version = "0.1.0"
description = "Inngest function that processes movie.watched events — fetches movie data from OMDb and sends plot summary emails via Resend."
requires-python = ">=3.11"
dependencies = [
    "inngest>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.0.0",
    "resend>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
